# benchmarking-stylus

./: .gitmodules  README.md
matrix_multiplication/solidity-matrix-multiplication/: README.md
matrix_multiplication/solidity-matrix-multiplication/script/: matrix_hardcoded.sh  matrix_tx_sender.sh
matrix_multiplication/solidity-matrix-multiplication/script/data/: matrix_10x10.json  matrix_20x20.json  matrix_30x30.json  matrix_40x40.json  matrix_50x50.json
matrix_multiplication/solidity-matrix-multiplication/src/: MatrixMultiplication.sol  MatrixMultiplicationHardcoded.sol
matrix_multiplication/solidity-matrix-multiplication/test/: MatrixMultiplication.t.sol  MatrixMultiplyEVM.t.sol
matrix_multiplication/stylus-matrix-multiplication/: .env.example  Cargo.toml  README.md
matrix_multiplication/stylus-matrix-multiplication/data/: matrix_10x10.json  matrix_50x50.json
matrix_multiplication/stylus-matrix-multiplication/examples/: matrix_multiplication.rs
matrix_multiplication/stylus-matrix-multiplication/scripts/: generate_matrix.sh  matrix_tx_sender.sh  stylus_50.sh  stylus_matrix_tx_sender.sh
matrix_multiplication/stylus-matrix-multiplication/scripts/data/: matrix_10x10.json  matrix_20x20.json  matrix_30x30.json  matrix_40x40.json  matrix_50x50.json
matrix_multiplication/stylus-matrix-multiplication/src/: lib.rs  main.rs
merkle-benchmark/solidity/src/: MerkleTree.sol
merkle-benchmark/solidity/test/: MerkleTree.t.sol
merkle-benchmark/stylus/: Cargo.toml
merkle-benchmark/stylus/src/: lib.rs  main.rs
