[package]
name = "stylus-matrix-multiplication"
version = "0.1.10"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/OffchainLabs/benchmarking-stylus/tree/main/matrix_multiplication/stylus-matrix-multiplication"
repository = "https://github.com/OffchainLabs/benchmarking-stylus/tree/main/matrix_multiplication/stylus-matrix-multiplication"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "stylus-matrix-multiplication"

[dependencies]
alloy-primitives = "=0.8.14"
alloy-sol-types = "=0.8.14"
mini-alloc = "0.4.2"
stylus-sdk = "0.7.0"
hex = "0.4.3"
dotenv = "0.15.0"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[[bin]]
name = "stylus-matrix-multiplication"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
